<resources>
    <string name="app_name" translatable="false">travel survival unit</string>
    <string name="create_an_account"><u>create an account</u></string>
    <string name="reset_password"><u>reset password</u></string>
    <string name="continue_without_registration"><u>continue without registration</u></string>
    <string name="password">password</string>
    <string name="settingsName">name :</string>
    <string name="settingsSurname">surname :</string>
    <string name="settingsLang">lang :</string>
    <string name="settingsHomeCountry">home country :</string>
    <string name="settingsBackground">background :</string>
    <string name="theme">choose</string>
    <string name="translation_button_text">translation</string>
    <string name="traditions_button_text">traditions</string>
    <string name="fun_facts_button_text">fun facts</string>
    <string name="settings_button_text">settings</string>
    <string name="world_clock_button_text">world clock</string>
    <string name="favourites_button_text">my favourites</string>
    <string name="refresh">refresh</string>
    <string name="city_name">istanbul</string>
    <string name="degree">4\u00b0 C</string>
    <string name="currency1_str">1 GBP = 5.5301 TRY</string>
    <string name="currency2_str">1 TRY = 0.1808 GBP</string>
    <string name="last_retrieved_beg">last retrieved</string>
    <string name="last_retrieved_end">days ago</string>
    <string name="name_surname">null pointers</string>
    <string name="translation_dir">english - turkish</string>
    <string name="country">turkey</string>
    <string name="traditions_menu">TRADITIONS</string>
    <string name="tradition_order">1</string>
    <string name="tradition_demo">For Turkish traditions and Turkish customs the early age of marriage is very typical. It is considered that a man should not reduce the standard of living of his wife so marriages between members of different social groups are rare. But the unions within one religious or ethnic group are very common although inter-ethnic marriages are not something unusual.     In 1926 the revolutionary government abolished the Turkish Islamic family code and adopted a slightly modified version of the Swiss Civil Code. The new family law recognizes only civil marriage ceremonies, the mandatory consent of both parties, conclusion of contract and monogamy. However in traditional Turkish society the choice of the future spouses and the marriage ceremony scenery is still being conducted by the heads of families only and the newlyweds themselves play a very minor role. In this respect all the rituals are considered as extremely important element as well as the blessing of marriage by imam. As for the Turkish wedding traditions and customs, wedding here lasts for many days and consists of several ceremonies which usually involve all family members and often all residents across the street or even the entire village.     In Islamic tradition the groom must pay the bride price although in recent years this tradition becomes a thing of the past - the amount of \"bride price\" (kalim) is being reduced depending on the expenses incurred for the wedding or the total family income, or simply transferred to the newlyweds to develop their own family. At the same time in the provincial patriarchal communities the money raise to buy pride can be a serious impediment to the marriage. For more informaton on Turkish wedding ceremony please visit http://www.turkishculture.org/lifestyles/ceremonies-536.htm.     Even though that divorces are not considered a sin their number is small. Divorced, especially men with children (and here it is not uncommon), quickly get remarried usually with the same divorced women. Modern code does not recognize the old norm of the husband\'s prerogative right of oral and unilateral divorce and prescribes the judicial procedure of this process. And there may be only sixreasons for divorce - adultery, life-threatening, criminal or unethical way of life, an escape from the family, mental infirmity and incompatibility. The apparent vagueness of these requirements is the cause of rare recognition of lawsuits and divorce by mutual consent is not defined by local legislation.</string>
    <string name="fun_fact">Istanbul spans two continents.</string>
    <string name="favourites_menu">MY FAVOURITES \u30c4</string>
    <string name="fun_fact_two" />
    <string name="fun_fact_three" />
    <string name="username">username</string>
    <string name="continuebutton">continue</string>
    <string name="log_in">log in</string>
    <string name="logo">logo</string>
    <string name="remember_me">Remember me</string>
    <string name="email">email</string>
    <string name="confirm_password">confirm password</string>
    <string name="travel_survival_unit">travel survival unit</string>
    <string name="type_your_mail">type your mail</string>
    <string-array name="language_array">
        <item>English</item>
        <item>Türkçe</item>
        <item>Français</item>
        <item>Deutsche</item>
    </string-array>
    <string-array name="country_array">
        <item>England</item>
        <item>Türkiye</item>
        <item>France</item>
        <item>Germany</item>
    </string-array>
</resources>
